--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
+    "lodash.differencewith": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
     "mobx": "^3.5.1",
     "mobx-react": "^4.4.1",
+    "moment": "^2.20.1",
     "object-assign": "4.1.1",
     "pm2": "^2.9.3",
     "promise": "8.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
     "autoprefixer": "7.1.6",
